# Curso_ebac_back-end_python

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.dev  movies.csv  multithreading.py  pyproject.toml  pyvenv.cfg
.github/workflows/: build.yml  pr.yml
async-views/asyncviews/: settings.py  urls.py  views.py
bookstore/: Pipfile  db.sqlite3  pyproject.toml  pytest.ini  settings.py  views.py
bookstore/bookstore/: settings.py
bookstore/order/: factories.py  urls.py
bookstore/order/migrations/: 0001_initial.py
bookstore/order/models/: order.py
bookstore/order/serializers/: order_serializer.py  order_serializers.py
bookstore/order/tests/tests_viewsets/: test_order_viewset.py
bookstore/product/: factories.py  urls.py
bookstore/product/migrations/: 0001_initial.py  0002_rename_category_product_category.py
bookstore/product/models/: __init__.py  category.py  product.py  products.py
bookstore/product/serializers/: __init__.py  category_serializer.py  product_serializer.py  products_serializers.py
bookstore/product/test/tests_viewset/: test_product_viewset.py
bookstore/product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
bookstore/product/viewsets/: product_viewset.py
mysite/blog/: factories.py  models.py  urls.py
mysite/mysite/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: __init__.py  order_serializers.py
order/viewset/: order_viewset.py
product/: admin.py  factories.py  urls.py
(+19 files in other folders)
